syntax = "proto3";

package pb;

option go_package = "cart-service/pb";

service CartService {
    rpc AddToCart(AddToCartRequest) returns (AddToCartResponse);
    rpc RemoveFromCart(RemoveFromCartRequest) returns (RemoveFromCartResponse);
    rpc GetCart(GetCartRequest) returns (GetCartResponse);
}

message AddToCartRequest {
    string user_id = 1;
    string product_id = 2;
    int32 quantity = 3;
}

message AddToCartResponse {
    bool success = 1;
    string message = 2;
}

message RemoveFromCartRequest {
    string user_id = 1;
    string product_id = 2;
}

message RemoveFromCartResponse {
    bool success = 1;
    string message = 2;
}

message GetCartRequest {
    string user_id = 1;
}

message GetCartResponse {
    repeated CartItem items = 1;
}

message CartItem {
    string product_id = 1;
    int32 quantity = 2;
}
